--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -13,6 +13,7 @@ scripts=["Control", "CanvasItem", "res://export_presets.cfg", "res://ListaComand
 create_new_node=Rect2(510, 190, 900, 700)
 search_help=Rect2(480, 270, 960, 540)
 editor_settings=Rect2(510, 190, 900, 700)
+export=Rect2(510, 290, 900, 500)
 
 [game_view]
 
@@ -21,3 +22,8 @@ make_floating_on_play=false
 [color_picker]
 
 picker_shape=3
+
+[export_options]
+
+default_filename="Game-Jam-game-main"
+export_debug=true
