--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/Finais/player defesa.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://Scripts/", "res://Cenas/", "res://Assets/Finais/")
+dock_filesystem_selected_paths=PackedStringArray("res://Cenas/sword_slasher.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Cenas/", "res://Assets/", "res://Assets/Finais/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -37,14 +37,14 @@ selected_bottom_panel_item=0
 
 [EditorWindow]
 
-screen=0
+screen=1
 mode="maximized"
-position=Vector2i(62, 23)
+position=Vector2i(0, 23)
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/camera_2d.gd", "res://Scripts/flecha.gd", "res://Scripts/lista_de_comandos.gd", "res://Scripts/player.gd"]
-selected_script="res://Scripts/player.gd"
+selected_script="res://Scripts/lista_de_comandos.gd"
 open_help=["CanvasItem", "Control"]
 script_split_offset=200
 list_split_offset=0
