--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/placeholder/UI/Panel/Body/Headless.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/placeholder/", "res://Assets/placeholder/UI/", "res://Assets/placeholder/UI/Panel/", "res://Assets/placeholder/UI/Panel/Body/", "res://Assets/placeholder/UI/Level/Button/", "res://Assets/placeholder/UI/Buttons/", "res://Assets/placeholder/UI/Buttons/Rect-Medium/", "res://Assets/placeholder/UI/Buttons/Rect-Medium/PlayIcon/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/placeholder/UI/Buttons/Square-Medium/Home/Hover.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Cenas/", "res://Assets/", "res://Assets/placeholder/", "res://Assets/placeholder/UI/", "res://Assets/placeholder/UI/Panel/Window/", "res://Assets/placeholder/UI/Level/Button/", "res://Assets/placeholder/UI/Buttons/", "res://Assets/placeholder/UI/Buttons/Square-Medium/", "res://Assets/placeholder/UI/Buttons/Square-Medium/Home/", "res://Assets/placeholder/UI/Buttons/Rect-Medium/", "res://Assets/placeholder/UI/Buttons/Rect-Medium/PlayText/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -29,10 +29,10 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Cenas/sword_slasher.tscn", "res://Cenas/flecha.tscn", "res://Cenas/menu.tscn")
-current_scene="res://Cenas/menu.tscn"
+current_scene="res://Cenas/sword_slasher.tscn"
 center_split_offset=-257
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -43,9 +43,9 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/camera_2d.gd", "res://Scripts/flecha.gd", "res://Scripts/lista_de_comandos.gd", "res://Scripts/player.gd"]
+open_scripts=["res://Scripts/camera_2d.gd", "res://Scripts/flecha.gd", "res://Scripts/game_over.gd", "res://Scripts/Global.gd", "res://Scripts/lista_de_comandos.gd", "res://Scripts/menu.gd", "res://Scripts/player.gd"]
 selected_script="res://Scripts/lista_de_comandos.gd"
-open_help=["CanvasItem", "Control"]
+open_help=["@GDScript", "@GlobalScope"]
 script_split_offset=200
 list_split_offset=0
 zoom_factor=1.0
