--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -21,7 +21,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 5,
-"scroll_position": 9.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,11 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 7,
-"folded_lines": Array[int]([32, 50, 76]),
+"column": 47,
+"folded_lines": Array[int]([23, 53, 71, 97, 104]),
 "h_scroll_position": 0,
-"row": 89,
-"scroll_position": 27.0,
+"row": 39,
+"scroll_position": 18.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,11 +59,53 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 70,
-"folded_lines": Array[int]([14, 29]),
+"column": 15,
+"folded_lines": Array[int]([16]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 6.0,
+"row": 34,
+"scroll_position": 63.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/menu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 36,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 21,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/game_over.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 12,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 20,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Global.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 8,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
