--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -48,8 +48,8 @@ state={
 "column": 1,
 "folded_lines": Array[int]([23, 53, 71, 97, 104]),
 "h_scroll_position": 0,
-"row": 43,
-"scroll_position": 18.0,
+"row": 40,
+"scroll_position": 25.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,11 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
-"folded_lines": Array[int]([16]),
+"column": 17,
+"folded_lines": Array[int]([16, 86, 109]),
 "h_scroll_position": 0,
-"row": 34,
-"scroll_position": 63.0,
+"row": 103,
+"scroll_position": 21.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
