--- a/.godot/editor/quick_open_dialog_cache.cfg
+++ b/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,3 +1,5 @@
 [selected_history]
 
 PackedScene=PackedStringArray("uid://drixhcc8rhejd")
+Texture=PackedStringArray("uid://djimvk5v6fp1m", "uid://c270jp8tmdkxw", "uid://buhsu0hkk25q7", "uid://clp8h876pdl7p", "uid://bd5mrv1l6ptka", "uid://t0rp62t8pybf", "uid://8tp33a68w2na", "uid://b670orkfoyhnc")
+Texture2D=PackedStringArray("uid://c270jp8tmdkxw")
