--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -45,11 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
-"folded_lines": Array[int]([23, 53, 71, 97, 104]),
+"column": 45,
+"folded_lines": Array[int]([22, 52, 70, 96, 103]),
 "h_scroll_position": 0,
 "row": 40,
-"scroll_position": 25.0,
+"scroll_position": 29.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,11 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
-"folded_lines": Array[int]([16, 86, 109]),
+"column": 41,
+"folded_lines": Array[int]([28]),
 "h_scroll_position": 0,
-"row": 103,
-"scroll_position": 21.0,
+"row": 57,
+"scroll_position": 36.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
