--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/Finais/inimigo ataque direita.png")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Assets/placeholder/UI/Panel/Window/", "res://Assets/placeholder/UI/Level/Button/", "res://Assets/placeholder/UI/Buttons/Square-Medium/", "res://Assets/placeholder/UI/Buttons/Square-Medium/Home/", "res://Assets/placeholder/UI/Buttons/Rect-Medium/", "res://Assets/placeholder/UI/Buttons/Rect-Medium/PlayText/")
 dock_node_current_tab=0
 dock_history_include_scene=true
