--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -45,8 +45,8 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 45,
-"folded_lines": Array[int]([22, 52, 70, 96, 103]),
+"column": 1,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 40,
 "scroll_position": 29.0,
@@ -59,11 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 41,
-"folded_lines": Array[int]([28]),
+"column": 51,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 57,
-"scroll_position": 36.0,
+"row": 12,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
