--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/Finais/flecha azul H.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Cenas/", "res://Assets/", "res://Assets/placeholder/UI/Panel/Window/", "res://Assets/placeholder/UI/Level/Button/", "res://Assets/placeholder/UI/Buttons/Square-Medium/", "res://Assets/placeholder/UI/Buttons/Square-Medium/Home/", "res://Assets/placeholder/UI/Buttons/Rect-Medium/", "res://Assets/placeholder/UI/Buttons/Rect-Medium/PlayText/", "res://Assets/Finais/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/m5x7.ttf")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/placeholder/UI/", "res://Assets/placeholder/UI/Panel/Window/", "res://Assets/placeholder/UI/Level/Button/", "res://Assets/placeholder/UI/Buttons/Square-Medium/", "res://Assets/placeholder/UI/Buttons/Square-Medium/Home/", "res://Assets/placeholder/UI/Buttons/Rect-Medium/", "res://Assets/placeholder/UI/Buttons/Rect-Medium/PlayText/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -32,7 +32,7 @@ open_scenes=PackedStringArray("res://Cenas/sword_slasher.tscn", "res://Cenas/fle
 current_scene="res://Cenas/sword_slasher.tscn"
 center_split_offset=-257
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -43,8 +43,8 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/camera_2d.gd", "res://Scripts/flecha.gd", "res://Scripts/game_over.gd", "res://Scripts/Global.gd", "res://Scripts/lista_de_comandos.gd", "res://Scripts/menu.gd", "res://Scripts/player.gd"]
-selected_script="res://Scripts/lista_de_comandos.gd"
+open_scripts=["res://Scripts/camera_2d.gd", "res://Scripts/flecha.gd", "res://Scripts/game_over.gd", "res://Scripts/Global.gd", "res://Scripts/lista_de_comandos.gd", "res://Scripts/menu.gd", "res://Scripts/player.gd", "res://Scripts/pontuação.gd"]
+selected_script="res://Scripts/pontuação.gd"
 open_help=["@GDScript", "@GlobalScope", "int", "Sprite2D", "Texture2D", "Timer"]
 script_split_offset=200
 list_split_offset=0
