--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -44,7 +44,7 @@ position=Vector2i(0, 23)
 [ScriptEditor]
 
 open_scripts=["res://Scripts/camera_2d.gd", "res://Scripts/flecha.gd", "res://Scripts/game_over.gd", "res://Scripts/Global.gd", "res://Scripts/lista_de_comandos.gd", "res://Scripts/menu.gd", "res://Scripts/player.gd", "res://Scripts/pontuação.gd"]
-selected_script="res://Scripts/pontuação.gd"
+selected_script="res://Scripts/lista_de_comandos.gd"
 open_help=["@GDScript", "@GlobalScope", "int", "Sprite2D", "Texture2D", "Timer"]
 script_split_offset=200
 list_split_offset=0
