--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -45,11 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 53,
-"folded_lines": Array[int]([44, 61, 66, 84, 110, 117]),
+"column": 17,
+"folded_lines": Array[int]([44, 60, 65, 88, 114, 121]),
 "h_scroll_position": 0,
 "row": 57,
-"scroll_position": 39.0,
+"scroll_position": 41.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,11 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 47,
-"folded_lines": Array[int]([]),
+"column": 38,
+"folded_lines": Array[int]([50]),
 "h_scroll_position": 0,
-"row": 67,
-"scroll_position": 43.0,
+"row": 50,
+"scroll_position": 42.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -119,10 +119,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 40,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
