--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/m5x7.ttf")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/placeholder/UI/", "res://Assets/placeholder/UI/Panel/Window/", "res://Assets/placeholder/UI/Level/Button/", "res://Assets/placeholder/UI/Buttons/Square-Medium/", "res://Assets/placeholder/UI/Buttons/Square-Medium/Home/", "res://Assets/placeholder/UI/Buttons/Rect-Medium/", "res://Assets/placeholder/UI/Buttons/Rect-Medium/PlayText/")
+dock_filesystem_selected_paths=PackedStringArray("res://Cenas/sword_slasher.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Cenas/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,32 +28,32 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Cenas/sword_slasher.tscn", "res://Cenas/flecha.tscn", "res://Cenas/menu.tscn")
+open_scenes=PackedStringArray("res://Cenas/menu.tscn", "res://Cenas/sword_slasher.tscn")
 current_scene="res://Cenas/sword_slasher.tscn"
-center_split_offset=-257
+center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
+selected_bottom_panel_item=4
 
 [EditorWindow]
 
-screen=1
+screen=0
 mode="maximized"
-position=Vector2i(0, 23)
+position=Vector2i(1920, 171)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/camera_2d.gd", "res://Scripts/flecha.gd", "res://Scripts/game_over.gd", "res://Scripts/Global.gd", "res://Scripts/lista_de_comandos.gd", "res://Scripts/menu.gd", "res://Scripts/player.gd", "res://Scripts/pontuação.gd"]
-selected_script="res://Scripts/lista_de_comandos.gd"
-open_help=["@GDScript", "@GlobalScope", "int", "Sprite2D", "Texture2D", "Timer"]
+open_scripts=[]
+selected_script=""
+open_help=[]
 script_split_offset=200
 list_split_offset=0
-zoom_factor=0.928571
+zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(684, 320, 690, 718)
-floating_window_screen=1
+floating_window_rect=Rect2i(0, 0, 0, 0)
+floating_window_screen=-1
 
 [ShaderEditor]
 
