--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,14 +9,14 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/Finais/UI/Menu/caveira game over.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Cenas/", "res://Assets/", "res://Assets/Finais/", "res://Assets/Finais/UI/", "res://Assets/Finais/UI/Menu/", "res://Assets/Finais/Objetos de ação/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/Finais/UI/GUI/seta azul.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/Finais/", "res://Assets/Finais/UI/", "res://Assets/Finais/UI/GUI/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=0
+dock_split_2=-2
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=312
@@ -32,8 +32,8 @@ open_scenes=PackedStringArray("res://Cenas/menu.tscn", "res://Cenas/sword_slashe
 current_scene="res://Cenas/sword_slasher.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
@@ -44,7 +44,7 @@ position=Vector2i(0, 23)
 [ScriptEditor]
 
 open_scripts=["res://Scripts/flecha.gd", "res://Scripts/lista_de_comandos.gd", "res://Scripts/Objetos de ação.gd", "res://Scripts/save ação.gd"]
-selected_script="res://Scripts/save ação.gd"
+selected_script="res://Scripts/flecha.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
