--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -28,7 +28,7 @@ recent_presets=PackedColorArray(1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 
 
 [export_options]
 
-default_filename="sword slasher"
+default_filename="Sword Slasher"
 export_debug=true
 
 [script_setup]
