--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -226,7 +226,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Export/Sword Slasher.zip"
+export_path="APK/Sword Slasher.zip"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
