--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/Finais/Objetos de ação/Player/Player pre ataque sheet.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/Finais/", "res://Assets/Finais/UI/", "res://Assets/Finais/Objetos de ação/", "res://Assets/Finais/Objetos de ação/Player/", "res://Assets/Finais/Objetos de ação/Inimigo base/")
+dock_filesystem_selected_paths=PackedStringArray("res://Cenas/flecha.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Cenas/", "res://Assets/", "res://Assets/Finais/", "res://Assets/Finais/UI/", "res://Assets/Finais/UI/GUI/", "res://Assets/Finais/Objetos de ação/", "res://Assets/Finais/Objetos de ação/Player/", "res://Assets/Finais/Objetos de ação/Inimigo base/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Cenas/menu.tscn", "res://Cenas/sword_slasher.tscn")
+open_scenes=PackedStringArray("res://Cenas/menu.tscn", "res://Cenas/sword_slasher.tscn", "res://Cenas/flecha.tscn")
 current_scene="res://Cenas/sword_slasher.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
@@ -43,9 +43,9 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/flecha.gd", "res://Scripts/lista_de_comandos.gd", "res://Scripts/Objetos de ação.gd", "res://Scripts/save ação.gd"]
-selected_script="res://Scripts/Objetos de ação.gd"
-open_help=[]
+open_scripts=["res://Scripts/camera_2d.gd", "res://Scripts/flecha.gd", "res://Scripts/lista_de_comandos.gd", "res://Scripts/Objetos de ação.gd", "res://Scripts/save ação.gd"]
+selected_script="res://Scripts/lista_de_comandos.gd"
+open_help=["Dictionary", "InputEvent", "Node"]
 script_split_offset=200
 list_split_offset=0
 zoom_factor=1.0
