--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="APK/sword slasher.apk"
+export_path="APK/sword slasherV0.0.1.1 teste double swipe.apk"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
