Adicionado setas laranjas e cinzas

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -31,12 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
-"folded_lines": Array[int]([51, 69]),
+"column": 3,
+"folded_lines": Array[int]([53, 71]),
 "h_scroll_position": 0,
-"row": 57,
-"scroll_position": 44.0,
-"selection": false,
+"row": 21,
+"scroll_position": 9.0,
+"selection": true,
+"selection_from_column": 3,
+"selection_from_line": 21,
+"selection_to_column": 18,
+"selection_to_line": 21,
 "syntax_highlighter": "GDScript"
 }
 
@@ -45,11 +49,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
-"folded_lines": Array[int]([29, 41, 45, 51, 77, 100]),
+"column": 25,
+"folded_lines": Array[int]([31, 43, 47, 53, 67, 122, 153, 200]),
 "h_scroll_position": 0,
-"row": 146,
-"scroll_position": 79.0,
+"row": 105,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,11 +63,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
-"folded_lines": Array[int]([32, 70]),
+"column": 2,
+"folded_lines": Array[int]([32, 47]),
 "h_scroll_position": 0,
-"row": 60,
-"scroll_position": 52.0,
+"row": 102,
+"scroll_position": 50.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
