--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Cenas/flecha.tscn")
+dock_filesystem_selected_paths=PackedStringArray()
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Cenas/", "res://Assets/", "res://Assets/Finais/", "res://Assets/Finais/UI/", "res://Assets/Finais/UI/GUI/", "res://Assets/Finais/Objetos de ação/", "res://Assets/Finais/Objetos de ação/Player/", "res://Assets/Finais/Objetos de ação/Inimigo base/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -43,7 +43,7 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/camera_2d.gd", "res://Scripts/flecha.gd", "res://Scripts/lista_de_comandos.gd", "res://Scripts/Objetos de ação.gd", "res://Scripts/save ação.gd"]
+open_scripts=["res://Scripts/flecha.gd", "res://Scripts/lista_de_comandos.gd", "res://Scripts/Objetos de ação.gd", "res://Scripts/save ação.gd"]
 selected_script="res://Scripts/lista_de_comandos.gd"
 open_help=["Dictionary", "InputEvent", "Node"]
 script_split_offset=200
