removido assets obsoletos

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -21,7 +21,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 42,
-"scroll_position": 42.0,
+"scroll_position": 33.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,16 +31,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 3,
+"column": 13,
 "folded_lines": Array[int]([53, 71]),
 "h_scroll_position": 0,
-"row": 21,
-"scroll_position": 9.0,
-"selection": true,
-"selection_from_column": 3,
-"selection_from_line": 21,
-"selection_to_column": 18,
-"selection_to_line": 21,
+"row": 42,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -63,11 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 1,
 "folded_lines": Array[int]([32, 47]),
 "h_scroll_position": 0,
-"row": 102,
-"scroll_position": 50.0,
+"row": 67,
+"scroll_position": 18.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
