--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="APK/sword slasherV0.0.1.1 teste double swipe.apk"
+export_path="APK/sword slasherV0.0.1.2.apk"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -34,9 +34,9 @@ architectures/arm64-v8a=true
 architectures/x86=false
 architectures/x86_64=false
 version/code=1
-version/name="swordSlasher"
-package/unique_name="com.example.$genname"
-package/name=""
+version/name="0.0.1.2"
+package/unique_name="Sword.Slasher"
+package/name="swordSlasher"
 package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=false
