--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -21,7 +21,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 33,
-"scroll_position": 26.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -32,7 +32,7 @@ state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
 "column": 1,
-"folded_lines": Array[int]([53, 73]),
+"folded_lines": Array[int]([73]),
 "h_scroll_position": 0,
 "row": 58,
 "scroll_position": 36.0,
@@ -119,7 +119,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 5,
-"scroll_position": 0.0,
+"scroll_position": 5.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
