--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -40,11 +40,7 @@ state={
 "h_scroll_position": 0,
 "row": 42,
 "scroll_position": 38.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 42,
-"selection_to_column": 32,
-"selection_to_line": 42,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -53,11 +49,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 11,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 36,
-"scroll_position": 25.0,
+"row": 223,
+"scroll_position": 205.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -67,11 +63,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 4,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 133,
-"scroll_position": 48.0,
+"row": 51,
+"scroll_position": 37.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -81,7 +77,7 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 18,
