--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -24,7 +24,7 @@ embed_size_mode=2
 [color_picker]
 
 picker_shape=3
-recent_presets=PackedColorArray(0.47451, 0.517647, 1, 1, 0.47451, 0.517647, 0.513726, 1, 0.47451, 0.517647, 0.694118, 1, 0.47451, 0.517647, 0, 1, 1, 0.517647, 0, 1, 1, 0.478431, 0, 1, 0.438282, 0.194414, 0, 1, 0.188706, 0.0682233, 0, 1, 0, 0, 0, 1)
+recent_presets=PackedColorArray(0.47451, 0.517647, 0.513726, 1, 0.47451, 0.517647, 0.694118, 1, 0.47451, 0.517647, 0, 1, 1, 0.517647, 0, 1, 1, 0.478431, 0, 1, 0.438282, 0.194414, 0, 1, 0.188706, 0.0682233, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0)
 color_mode=0
 
 [export_options]
