--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -29,8 +29,8 @@ color_mode=0
 
 [export_options]
 
-default_filename="sword slasherV0.0.2.0"
-export_debug=true
+default_filename="sword slasherV0.3.0"
+export_debug=false
 
 [script_setup]
 
