--- a/.godot/export_credentials.cfg
+++ b/.godot/export_credentials.cfg
@@ -7,9 +7,9 @@ script_encryption_key=""
 keystore/debug=""
 keystore/debug_user=""
 keystore/debug_password=""
-keystore/release=""
-keystore/release_user=""
-keystore/release_password=""
+keystore/release="D:/Arthur/projetos/SwordSlasherFaculdade/Sword Slasher.keystore"
+keystore/release_user="meualias"
+keystore/release_password="pennarey2003"
 
 [preset.1]
 
