--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/Finais/UI/GUI/vida.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/Finais/", "res://Assets/Finais/UI/", "res://Assets/Finais/UI/GUI/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -29,11 +29,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Cenas/sword_slasher.tscn", "res://Cenas/flecha.tscn", "res://Cenas/menu.tscn", "res://Cenas/instruções_guia.tscn")
-current_scene="res://Cenas/sword_slasher.tscn"
+current_scene="res://Cenas/menu.tscn"
 center_split_offset=-257
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=4
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -44,7 +44,7 @@ position=Vector2i(0, 23)
 [ScriptEditor]
 
 open_scripts=["res://Scripts/camera_2d.gd", "res://Scripts/flecha.gd", "res://Scripts/game_over.gd", "res://Scripts/Global.gd", "res://Scripts/instruções_guia.gd", "res://Scripts/lista_de_comandos.gd", "res://Scripts/menu.gd", "res://Scripts/Objetos de ação.gd", "res://Scripts/pontuação.gd", "res://Scripts/sons.gd"]
-selected_script="res://Scripts/game_over.gd"
+selected_script="res://Scripts/sons.gd"
 open_help=["AudioStreamPlayer2D", "Object", "Timer", "Tween"]
 script_split_offset=200
 list_split_offset=59
