adicionado streaks e notas baseado na pontuação

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Cenas/sword_slasher.tscn", "res://Cenas/flecha.tscn", "res://Cenas/menu.tscn", "res://Cenas/instruções_guia.tscn")
-current_scene="res://Cenas/menu.tscn"
+current_scene="res://Cenas/sword_slasher.tscn"
 center_split_offset=-257
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -43,8 +43,8 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/camera_2d.gd", "res://Scripts/flecha.gd", "res://Scripts/game_over.gd", "res://Scripts/Global.gd", "res://Scripts/instruções_guia.gd", "res://Scripts/lista_de_comandos.gd", "res://Scripts/menu.gd", "res://Scripts/Objetos de ação.gd", "res://Scripts/pontuação.gd", "res://Scripts/sons.gd"]
-selected_script="res://Scripts/sons.gd"
+open_scripts=["res://Scripts/camera_2d.gd", "res://Scripts/flecha.gd", "res://Scripts/game_over.gd", "res://Scripts/Global.gd", "res://Scripts/instruções_guia.gd", "res://Scripts/lista_de_comandos.gd", "res://Scripts/pontuação.gd", "res://Scripts/sons.gd", "res://Scripts/gradeLabel.gd"]
+selected_script="res://Scripts/gradeLabel.gd"
 open_help=["AudioStreamPlayer2D", "Object", "Timer", "Tween"]
 script_split_offset=200
 list_split_offset=59
