--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -49,11 +49,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
-"folded_lines": Array[int]([61, 67, 81, 144, 190, 230, 247, 273]),
+"column": 17,
+"folded_lines": Array[int]([61, 67, 190, 247, 273]),
 "h_scroll_position": 0,
-"row": 223,
-"scroll_position": 145.0,
+"row": 230,
+"scroll_position": 186.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -67,7 +67,7 @@ state={
 "folded_lines": Array[int]([71]),
 "h_scroll_position": 0,
 "row": 45,
-"scroll_position": 35.0,
+"scroll_position": 24.0,
 "selection": true,
 "selection_from_column": 3,
 "selection_from_line": 45,
@@ -85,7 +85,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 18,
-"scroll_position": 43.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -95,11 +95,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
-"scroll_position": 12.0,
+"row": 70,
+"scroll_position": 44.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -112,7 +112,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 18,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -126,8 +126,8 @@ state={
 "column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 0.0,
+"row": 12,
+"scroll_position": 5.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -139,9 +139,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 155,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 300,
+"h_scroll_position": 504,
 "row": 31,
-"scroll_position": 24.0,
+"scroll_position": 10.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -155,6 +155,20 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 14,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/gradeLabel.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 20,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
