mais efeitos e otimmização

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/Sons/sword-clash-241729.mp3")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/Sons/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -19,7 +19,7 @@ dock_closed=[]
 dock_split_2=-2
 dock_split_3=0
 dock_hsplit_1=174
-dock_hsplit_2=318
+dock_hsplit_2=364
 dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -37,14 +37,14 @@ selected_bottom_panel_item=0
 
 [EditorWindow]
 
-screen=1
+screen=0
 mode="maximized"
 position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/camera_2d.gd", "res://Scripts/flecha.gd", "res://Scripts/game_over.gd", "res://Scripts/Global.gd", "res://Scripts/instruções_guia.gd", "res://Scripts/lista_de_comandos.gd", "res://Scripts/pontuação.gd", "res://Scripts/sons.gd", "res://Scripts/gradeLabel.gd"]
-selected_script="res://Scripts/gradeLabel.gd"
+open_scripts=["res://Scripts/camera_2d.gd", "res://Scripts/flecha.gd", "res://Scripts/game_over.gd", "res://Scripts/Global.gd", "res://Scripts/gradeLabel.gd", "res://Scripts/instruções_guia.gd", "res://Scripts/lista_de_comandos.gd", "res://Scripts/menu.gd", "res://Scripts/Objetos de ação.gd", "res://Scripts/pontuação.gd", "res://Scripts/ranbow.gd", "res://Scripts/sons.gd"]
+selected_script="res://Scripts/ranbow.gd"
 open_help=["AudioStreamPlayer2D", "Object", "Timer", "Tween"]
 script_split_offset=200
 list_split_offset=59
