--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -21,7 +21,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 8,
-"scroll_position": 0.0,
+"scroll_position": 8.0,
 "selection": true,
 "selection_from_column": 7,
 "selection_from_line": 8,
@@ -39,7 +39,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 50,
-"scroll_position": 42.0,
+"scroll_position": 31.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -49,12 +49,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 7,
 "folded_lines": Array[int]([61, 67, 190, 247, 273]),
 "h_scroll_position": 0,
-"row": 230,
-"scroll_position": 186.0,
-"selection": false,
+"row": 54,
+"scroll_position": 41.0,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 54,
+"selection_to_column": 7,
+"selection_to_line": 54,
 "syntax_highlighter": "GDScript"
 }
 
@@ -63,16 +67,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 8,
+"column": 18,
 "folded_lines": Array[int]([71]),
 "h_scroll_position": 0,
-"row": 45,
-"scroll_position": 24.0,
-"selection": true,
-"selection_from_column": 3,
-"selection_from_line": 45,
-"selection_to_column": 8,
-"selection_to_line": 45,
+"row": 120,
+"scroll_position": 99.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -81,12 +81,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 7,
+"column": 5,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 18,
-"scroll_position": 0.0,
-"selection": false,
+"row": 37,
+"scroll_position": 27.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 37,
+"selection_to_column": 5,
+"selection_to_line": 37,
 "syntax_highlighter": "GDScript"
 }
 
@@ -95,11 +99,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 36,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 70,
-"scroll_position": 44.0,
+"row": 27,
+"scroll_position": 83.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -109,11 +113,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
+"row": 18,
+"scroll_position": 5.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -127,7 +131,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 12,
-"scroll_position": 5.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -141,7 +145,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 504,
 "row": 31,
-"scroll_position": 10.0,
+"scroll_position": 12.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -154,7 +158,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
+"row": 16,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -169,6 +173,20 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 20,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/ranbow.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 21,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
